--- a/.github/workflows/content-web.yml
+++ b/.github/workflows/content-web.yml
@@ -1,4 +1,4 @@
-me: content-web
+name: content-web
 
 # This workflow is triggered on push to the 'content-web' directory of the  master branch of the repository
 on:
@@ -35,7 +35,7 @@ jobs:
       - name: Checkout
       uses: actions/checkout@master
 
-      - name: Set up Docker Buildx
+      - name: 'Set up Docker Buildx'
       uses: docker/setup-buildx-action@v1
 
       - name: Login to ACR
