--- a/.github/workflows/content-web.yml
+++ b/.github/workflows/content-web.yml
@@ -19,9 +19,9 @@ on:
 # Environment variables are defined so that they can be used throughout the job definitions.
 env:
    imageRepository: 'content-web'
-   resourceGroupName: 'fabmedical-267824'
-   containerRegistryName: 'fabmedical267824'
-   containerRegistry: 'fabmedical267824.azurecr.io'
+   resourceGroupName: 'fabmedical'
+   containerRegistryName: 'fabmedical'
+   containerRegistry: 'fabmedical.azurecr.io'
    dockerfilePath: './content-web'
    tag: '${{ github.run_id  }}'
 
